--- a/cartoons2.css
+++ b/cartoons2.css
@@ -3,7 +3,7 @@ ul {
     list-style-type: none;
     margin: 10px;
     padding: 10px;
-    background-color: rgb(236, 192, 70);
+    background-color: rgb(180, 216, 199);
     overflow: auto;
   }
     li {
@@ -17,7 +17,7 @@ ul {
     text-decoration: none;
   }
   li a:hover {
-    background-color: rgb(241, 172, 43);
+    background-color: rgb(79, 129, 84);
   }
 
 .grid-container{
@@ -50,28 +50,28 @@ ul {
         grid-template-columns: 1fr;
 }}
 
-div.desc {
-    padding: 15px;
-    text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
-  }
+.desc{
+    font-size: 14px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+text-align: center;
+}
 img{
     width: 100%;
     height: 100%;
 }
 body{
-   background-color: rgb(236, 233, 195);
+   background-color: rgb(232, 255, 255);
 }
- 
-   .grid-item{
+ .grid-item{
     background-repeat: no-repeat;
     background-size: contain;
-    max-width: 100%;
-    max-height: 70%;
+    max-width: 400px;
+    max-height: 200px;
     min-height: 200px;
     max-height: 400px;
     border: 1px solid rgb(10, 4, 4);
     border-radius: 5px;
     position: relative;
  }
+ 
