--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
 
+body{
+   background-color: rgb(255, 196, 209, 0.4);
+ 
+}
+h1, h2, h3, h4{
+  font-size: 30px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+p{
+  font-size: 20px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  line-height: 1.5;
+}
 ul {
     list-style-type: none;
-    margin: 10px;
     padding: 10px;
-    background-color: rgb(236, 192, 70);
+    background-color: rgb(255, 154, 196);
     overflow: auto;
   }
     li {
@@ -17,14 +29,14 @@ ul {
     text-decoration: none;
   }
   li a:hover {
-    background-color: rgb(241, 172, 43);
+    background-color: rgb(223, 118, 236);
   }
 
 .grid-container{
     display: grid;
     position: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 4fr 4fr ;
+    grid-template-rows: 4fr 4fr ;
  
     justify-content: space-around;
    align-items: stretch;
@@ -33,21 +45,21 @@ ul {
    
     flex-wrap: wrap;
     column-gap: 30px;
-    row-gap: 30px;
+    row-gap: 60px;
     
   }
 @media(
     max-width: 900px
 ){
     .grid-container{ 
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 4fr 4fr;
 }}
 
 @media(
     max-width: 700px
 ){
     .grid-container{ 
-        grid-template-columns: 1fr;
+        grid-template-columns: 4fr;
 }}
 
 div.desc {
@@ -56,13 +68,11 @@ div.desc {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   
   }
-img{
-    width: 100%;
-    height: 100%;
+  .grid-item img{
+    width: 820px;
+    height: 400px;
 }
-body{
-   background-color: rgb(236, 233, 195);
-}
+
  
    .grid-item{
     background-repeat: no-repeat;
@@ -75,3 +85,66 @@ body{
     border-radius: 5px;
     position: relative;
  }
+ div.grid-item:hover {
+   border: 1.5px solid #777;
+ }
+label{
+  text-align: left;
+  font-size: 25px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+ 
+ input{
+  width: 30%;
+  height: 25px;
+  box-sizing: border-box;
+  border-radius: 1px;
+  font-size: 15px;
+  text-align: left;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  
+}
+
+textarea{
+  width: 30%;
+  height: 100px;
+  margin: 0%;
+  box-sizing: border-box;
+  border-radius: 2px;
+  font-size: 15px;
+  text-align: left;
+  margin-bottom: 10px;
+  margin-top: 12px;
+  
+}
+
+.aboutme{
+  background-color: bisque;
+ }
+
+
+  
+   
+ 
+ button{
+width: 15%;
+height: 30px;
+display: inline-block;
+font-size: 20px;
+font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+transition-duration: 0.4s;
+cursor: pointer;
+text-align: center;
+position: relative;
+ margin-left: 0px;
+ }
+  button{
+    background-color: beige;
+    border: 2px solid violet;
+  
+  }
+  button:hover{
+    background-color: blueviolet;
+    color:rgb(236, 233, 195);
+  }
