--- a/style.css
+++ b/style.css
@@ -15,29 +15,34 @@ width: 100%;
 }
 #home{
   background-color: antiquewhite;
+  background-image: url(photo/Home.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-left: 50px;
+  padding-top: 50px;
 }
 #projects{
-  background-color: indianred;
+  background-color: rgba(250, 210, 234, 0.963);
+
 }
 #aboutme{
-  background-color: aquamarine;
+  background-color: rgb(161, 135, 112);
+  padding-left: 50px;
+  padding-top: 100px;
+  
 }
 #contacts{
-  background-color: darkcyan;
+  background-color: antiquewhite;
+  padding-left: 50px;
+  padding-top: 100px;
+  
 }
-h1, h2, h3, h4{
-  font-size: 30px;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-p{
-  font-size: 20px;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  line-height: 1.5;
-}
+
 nav{
   position: sticky;
   top: 0;
-  background-color: white;
+  background-color: rgb(240, 134, 134);
+  
  }
 
  nav .menu{
@@ -105,8 +110,9 @@ div.desc {
   
   }
   .grid-item img{
-    width: 820px;
-    height: 400px;
+    width: 825px;
+    height: 398px;
+    border-radius: 5px;
 }
 
  
@@ -122,29 +128,52 @@ div.desc {
     position: relative;
  }
  div.grid-item:hover {
-   border: 1.5px solid #777;
+   border: 1.5px solid rgb(240, 240, 104);
  }
+ h1, h2, h3, h4{
+  font-size: 30px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+p{
+  font-size: 30px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  line-height: 1.5;
+  clear: right;
+  margin-top: 5%;
+}
+
+ #myphoto{
+   width: 500px;
+   height: 400px;
+   float: right;
+  margin-right: 5%;
+  position: relative;
+  border: 1px solid rgb(10, 4, 4);
+  border-radius: 60px;
+  
+ }
+
 label{
-  text-align: left;
-  font-size: 25px;
+   font-size: 25px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
  
  input{
   width: 30%;
-  height: 25px;
+  height: 40px;
   box-sizing: border-box;
   border-radius: 1px;
   font-size: 15px;
   text-align: left;
   margin-bottom: 10px;
   margin-top: 10px;
+
   
 }
 
 textarea{
   width: 30%;
-  height: 100px;
+  height: 200px;
   margin: 0%;
   box-sizing: border-box;
   border-radius: 2px;
@@ -156,22 +185,20 @@ textarea{
 }
 
  button{
-width: 15%;
+width: 10%;
 height: 30px;
 display: inline-block;
 font-size: 20px;
+text-align: center;
 font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 transition-duration: 0.4s;
 cursor: pointer;
-text-align: center;
 position: relative;
- margin-left: 0px;
- display: flex;
- flex-direction: column;
- }
-  button{
-    background-color: beige;
-    border: 2px solid violet;
+margin-left: 0px;
+display: flex;
+flex-direction: column;
+background-color: beige;
+border: 2px solid violet;
   
   }
   button:hover{
