--- a/style.css
+++ b/style.css
@@ -36,10 +36,12 @@ width: 100%;
   padding-left: 50px;
   padding-top: 100px;
   
+  
 }
 
 nav{
   position: sticky;
+  z-index: 1;
   top: 0;
   background-color: rgb(240, 134, 134);
   
@@ -139,6 +141,7 @@ p{
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   line-height: 1.5;
   clear: right;
+  top: 50%;
   margin-top: 5%;
 }
 
@@ -146,10 +149,12 @@ p{
    width: 500px;
    height: 400px;
    float: right;
+
   margin-right: 5%;
   position: relative;
   border: 1px solid rgb(10, 4, 4);
   border-radius: 60px;
+ 
   
  }
 
@@ -187,21 +192,16 @@ textarea{
  button{
 width: 10%;
 height: 30px;
-display: inline-block;
 font-size: 20px;
 text-align: center;
 font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 transition-duration: 0.4s;
 cursor: pointer;
-position: relative;
-margin-left: 0px;
-display: flex;
-flex-direction: column;
 background-color: beige;
 border: 2px solid violet;
-  
   }
   button:hover{
     background-color: blueviolet;
     color:rgb(236, 233, 195);
   }
+  
