--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 } 
 html {
    scroll-behavior: smooth;
+   width: 100%;
 }
 
 section{
@@ -18,23 +19,24 @@ width: 100%;
   background-image: url(photo/Home.png);
   background-repeat: no-repeat;
   background-size: cover;
-  padding-left: 50px;
-  padding-top: 50px;
+width: 100%;
 }
 #projects{
+  padding-left: 50px;
+  padding-top: 70px;
   background-color: rgba(250, 210, 234, 0.963);
 
 }
 #aboutme{
   background-color: rgb(161, 135, 112);
   padding-left: 50px;
-  padding-top: 100px;
+  padding-top: 70px;
   
 }
 #contacts{
   background-color: antiquewhite;
   padding-left: 50px;
-  padding-top: 100px;
+  padding-top: 70px;
   
   
 }
@@ -78,31 +80,30 @@ nav .menu ul li.active a{
 .grid-container{
     display: grid;
     position: center;
-    grid-template-columns: 4fr 4fr ;
-    grid-template-rows: 4fr 4fr ;
- 
+    grid-template-columns: 45% 45%;
+    grid-template-rows: auto auto ;
     justify-content: space-around;
-   align-items: stretch;
+   align-items: center;
+   justify-items: center;
     min-height: 30px;
-    width: 100%;
-   
-    flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 60px;
+    width: 85%;
+     flex-wrap: wrap;
+    column-gap: 50px;
+    row-gap: 50px;
     
   }
 @media(
     max-width: 900px
 ){
     .grid-container{ 
-        grid-template-columns: 4fr 4fr;
+        grid-template-columns: 30% 30%;
 }}
 
 @media(
     max-width: 700px
 ){
     .grid-container{ 
-        grid-template-columns: 4fr;
+        grid-template-columns: 30% 30%;
 }}
 
 div.desc {
@@ -112,8 +113,8 @@ div.desc {
   
   }
   .grid-item img{
-    width: 825px;
-    height: 398px;
+    width: 482px;
+    height: 248px;
     border-radius: 5px;
 }
 
@@ -121,10 +122,9 @@ div.desc {
    .grid-item{
     background-repeat: no-repeat;
     background-size: contain;
-    max-width: 100%;
     max-height: 70%;
     min-height: 200px;
-    max-height: 400px;
+    max-height: 250px;
     border: 1px solid rgb(10, 4, 4);
     border-radius: 5px;
     position: relative;
@@ -132,28 +132,29 @@ div.desc {
  div.grid-item:hover {
    border: 1.5px solid rgb(240, 240, 104);
  }
+ 
  h1, h2, h3, h4{
   font-size: 30px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 p{
-  font-size: 30px;
+  font-size: 20px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   line-height: 1.5;
   clear: right;
-  top: 50%;
   margin-top: 5%;
 }
 
  #myphoto{
-   width: 500px;
-   height: 400px;
-   float: right;
-
-  margin-right: 5%;
+  max-height: 70%;
+  min-height: 200px;
+  max-height: 250px;
   position: relative;
+  float: right;
+  margin-left: 5%;
+  margin-right: 5%;
   border: 1px solid rgb(10, 4, 4);
-  border-radius: 60px;
+  border-radius: 30px;
  
   
  }
